<resources>
    <string name="app_name">Weather</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="degree" translatable="false">%s°</string>
    <string name="percent" translatable="false">%s%%</string>

    <!--Error strings-->
    <string name="error_message">Error. Please try again later.</string>

    <!--Overview strings-->
    <string name="overview_title">Overview</string>
    <string name="overview_feels_like">Feels Like</string>
    <string name="overview_humidity">Humidity</string>
    <string name="overview_clouds">Clouds</string>
    <string name="overview_forecast_title">Forecast</string>

    <!--Settings strings-->
    <string name="settings_title">Settings</string>
    <string name="settings_update_title">Background update</string>
    <string name="settings_interval_title">Interval</string>
    <string name="settings_temperature_units">Temperature units</string>
    <string-array name="interval_text">
        <item>1 Hour</item>
        <item>2 Hours</item>
        <item>3 Hours</item>
        <item>4 Hours</item>
    </string-array>

    <!--About strings-->
    <string name="about_title">About</string>

    <!--Cities-->
    <string name="cities_title">Location selection</string>
    <string name="cities_search_image">Search</string>
    <string name="cities_search_hint">Specify the location</string>
    <string name="cities_clear_button">Clear text</string>
    <string name="cities_unknown_city">Unknown</string>
    <string name="cities_search_title">Search</string>
    <string name="cities_favorite_title">Favorite</string>

    <!--Places errors-->
    <string name="error_http_io">Connection is not available</string>
    <string name="error_places_zero_results">Search returned no results</string>
    <string name="error_places_over_query_limit">Exceeding the quota</string>
    <string name="error_places_request_denied">Request was denied</string>
    <string name="error_places_invalid_request">Invalid request</string>
    <string name="error_places_not_found">Referenced location was not found</string>
    <string name="error_places_unknown_error">Server-side error</string>

    <string name="api_language_value">en</string>

    <string name="toolbar_bookmark_description">Check in to favorite.</string>
    <string name="city_favorite_mark_description">Favorite city mark.</string>
    <string name="powered_by_google_description">Authorship data.</string>
    <string name="weather_icon_description">Weather icon.</string>
    <string name="temperature_icon_description">Temperature.</string>
    <string name="humidity_icon_description">Humidity.</string>
    <string name="clouds_icon_description">Clouds.</string>
</resources>
