<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:id="@+id/fragment_cities"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical">

    <LinearLayout
        android:id="@+id/cities_search_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0"
        android:gravity="center"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/cities_search_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:layout_weight="0"
            android:background="@null"
            android:contentDescription="@string/cities_search_image"
            android:src="@drawable/cities_ic_search"/>

        <EditText
            android:id="@+id/cities_search_input"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@null"
            android:hint="@string/cities_search_hint"
            android:inputType="textNoSuggestions"
            android:lines="1"
            android:maxLines="1"
            android:minLines="1"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:textSize="20sp"/>

        <ImageButton
            android:id="@+id/cities_clear_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:layout_weight="0"
            android:background="@null"
            android:contentDescription="@string/cities_clear_button"
            android:src="@drawable/cities_ic_clear"/>
    </LinearLayout>

    <android.support.v7.widget.RecyclerView
        android:id="@+id/cities_recycler_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="8dp"
        android:layout_weight="1"/>

    <ImageView
        android:id="@+id/cities_powered_by_google_image_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:layout_weight="0"
        android:contentDescription="@string/powered_by_google_description"
        android:src="@drawable/cities_powered_by_google_light"/>
</LinearLayout>